# leitor-datasus

./: .gitignore  README.md  requirements.txt
datasus-project/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
datasus-project/src/: leitor.py  manage.py
datasus-project/src/core/: models.py  sinannet_cnv_coquebr171132177_37_141_223.csv  urls.py  views.py
datasus-project/src/core/migrations/: 0001_initial.py
datasus-project/src/leitor_project/: asgi.py  settings.py  urls.py  wsgi.py
datasus-project/static/css/: style.css
datasus-project/static/js/: scripts.js
datasus-project/templates/: index.html
leitor-datasus/templates/: index.html  style.css
