[project]
name = "datasus-project"
version = "0.1.0"
description = ""
authors = [
    {name = "isaac451-andrade",email = "166961938+isaac451-andrade@users.noreply.github.com"}
]
readme = "../README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "leitor_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
